--- a/index.html
+++ b/index.html
@@ -354,6 +354,23 @@
             </div>
         </div>
 
+            <div class="row">
+        <div class="col-xs-12 col-offset-xs-6">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Ränta -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-5746005508466845"
+     data-ad-slot="5290080130"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+        </div>
+
+    </div>
+
+
     </div>
 
 
@@ -623,6 +640,9 @@
             this.setMonth(date.getMonth(), 1);
             return this;
         }
+
+
+
     </script>
 
 </body>
