Fix ad-styling container

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         </div>
 
             <div class="row">
-        <div class="col-xs-12 col-offset-xs-6">
+        <div class="col-xs-12 ads" style="text-align:center;">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Ränta -->
 <ins class="adsbygoogle"
