--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
                     <div class="description">
 
                         <p>
-                            Räkna snabbt ut dina räntekostnader. Jämför hur olika räntor och amorteringsbelopp påverkar din ekonomi.
+                            Räkna snabbt ut dina räntekostnader. Jämför hur olika räntor, amorteringsbelopp och avbetalningshastighet påverkar din ekonomi.
                             <br />
-                            Se hur ditt sparande rör sig över tid och hur mycket en hög sparränta påverkar ditt kapital
+                            Se hur ditt sparande rör sig över tid och hur mycket en högre sparränta påverkar ditt kapital
                         </p>
-                        <p>
-                            
-                        </p>
+                       
                         <p>
                             Vi hjälper dig ta rätt beslut om dina lån.
                         </p>
