--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </header>
 
-    <div class="container" ng-controller="CalculateController" style="min-width:800px;">
+    <div class="container" ng-controller="CalculateController">
         <div class="row" ng-repeat="loan in loans" ng-controller="LoanController">
             <div class="col-md-12">
                 <div class="locked" ng-hide="loan.active">
@@ -108,10 +108,8 @@
 
                         <div ng-repeat="calculation in loan.calculations" ng-controller="CalculationController">
 
-                            <div class="row" style="margin-bottom: 16px;">
-
-                            
-
+                            <div class="row calculationRow">
+                                
                                 <div class="col-xs-7">
                                     <div class="col-xs-4">
                                         <div class="input-group">
@@ -160,21 +158,21 @@
                             </div>
 
                             <div class="row" ng-show="calculation.showOverview && !calculation.tooLowInstallment">
-                                    <div class="col-xs-6 col-xs-offset-6" style="max-height:400px;overflow:auto;">
+                                    <div class="col-xs-6 col-xs-offset-6 overviewContainer">
                                         <span class="Installment pull-right">(Siffra inom parantes avser kostnad inklusive amortering)</span>
                                         <table class="table table-condensed table-striped table-hover">
                                             <thead>
                                                 <tr>
                                                     <th></th>
-                                                    <th style="text-align:right;">Årskostnad</th>
-                                                    <th style="text-align:right;">Månadskostnad</th>
+                                                    <th class="Number">Årskostnad</th>
+                                                    <th class="Number">Månadskostnad</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr ng-repeat="year in calculation.result.overview">
                                                     <td>{{year.id}}</td>
-                                                    <td style="text-align:right;">{{year.sum}} <span class="Installment">({{year.sumWithInstallment}})</span></td>
-                                                    <td style="text-align:right;">{{year.monthly}} <span class="Installment">({{year.monthlyWithInstallment}})</span></td>
+                                                    <td class="Number">{{year.sum}} <span class="Installment">({{year.sumWithInstallment}})</span></td>
+                                                    <td class="Number">{{year.monthly}} <span class="Installment">({{year.monthlyWithInstallment}})</span></td>
                                                 </tr>
                                             </tbody>
 
@@ -224,7 +222,7 @@
                             </div>
                         </div>
 
-                        <div class="row" style="margin-bottom: 16px;" ng-repeat="calculation in loan.calculations" ng-controller="CalculationController">
+                        <div class="row calculationRow" ng-repeat="calculation in loan.calculations" ng-controller="CalculationController">
 
                             <div class="col-xs-7">
                                 <div class="col-xs-4">
@@ -276,7 +274,7 @@
         </div>
 
             <div class="row">
-        <div class="col-xs-12 ads" style="text-align:center;">
+        <div class="col-xs-12 ads">
 
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
