--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </script>
 
     
-    <script src="content/js/main.js"></script>
+    <script src="content/js/main.js?v=1"></script>
 
 </body>
 </html>
