--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="yomoApp">
 <head>
     <title>Räntekalkyl.se - Räkna och jämför räntor</title>
-    <meta name="description" content="Med hjälp av äntekalkyl.se kan du snabbt och lätt räkna ut räntekostnader på dina lån. Jämför räntor och amorteringar för att snabbt ske skillnaden på räntekostnader">
+    <meta name="description" content="Med hjälp av Räntekalkylen.se kan du snabbt och lätt räkna ut räntekostnader på dina lån. Jämför räntor och amorteringar för att snabbt ske skillnaden på olika räntor. Du kan även räkna ränta på ränta för att se hur dina sparpengar växer.">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="logotype">
-                        <h1 class="color">Räntekalkyl.se</h1>
+                        <h1 class="color">Räntekalkylen.se</h1>
                     </div>
                 </div>
 
