--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="yomoApp">
 <head>
-    <title>Räntekalkyl.se - Räkna och jämför räntor</title>
+    <title>Räntekalkylen.se - Räkna och jämför räntor</title>
     <meta name="description" content="Med hjälp av Räntekalkylen.se kan du snabbt och lätt räkna ut räntekostnader på dina lån. Jämför räntor och amorteringar för att snabbt ske skillnaden på olika räntor. Du kan även räkna ränta på ränta för att se hur dina sparpengar växer.">
 
     <meta charset="utf-8">
