Ändrade lite texter.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="yomoApp">
 <head>
-    <title>Räntekalkylen.se - Räkna och jämför räntor</title>
+    <title>Räntekalkylen.se - Räkna på ränta och jämför olika räntor</title>
     <meta name="description" content="Med hjälp av Räntekalkylen.se kan du snabbt och lätt räkna ut räntekostnader på dina lån. Jämför räntor och amorteringar för att snabbt ske skillnaden på olika räntor. Du kan även räkna ränta på ränta för att se hur dina sparpengar växer.">
 
     <meta charset="utf-8">
@@ -36,13 +36,13 @@
                     <div class="description">
 
                         <p>
-                            Räkna snabbt ut dina räntekostnader. Jämför hur olika räntor, amorteringsbelopp och avbetalningshastighet påverkar din ekonomi.
+                            Räkna snabbt ut dina räntekostnader. Jämför hur olika räntor, amorteringsbelopp och avbetalningshastigheter påverkar din ekonomi.
                             <br />
-                            Se hur ditt sparande rör sig över tid och hur mycket en högre sparränta påverkar ditt kapital
+                            Eller välj att se hur ditt sparande rör sig över tid och hur mycket en högre sparränta påverkar ditt kapital.
                         </p>
 
                         <p>
-                            Vi hjälper dig ta rätt beslut om dina lån.
+                            Vi hjälper dig med dina ränteberäkningar!
                         </p>
 
                     </div>
