--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
         
     <meta name="msvalidate.01" content="A73BA76E47AB4DF05A697812183841D2" />
+    <meta name="google-site-verification" content="XKBROtRvJ9NiEx_Tlxy6hL7oh-ruYdutMkupECpAriE" />
 
     <title>Räntekalkylen.se - Räkna på ränta och jämför olika räntor</title>
     <meta name="description" content="Med hjälp av Räntekalkylen.se kan du snabbt och lätt räkna ut räntekostnader på dina lån. Jämför räntor och amorteringar för att snabbt ske skillnaden på olika räntor. Du kan även räkna ränta på ränta för att se hur dina sparpengar växer.">
