Title och description

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 ﻿<!DOCTYPE html>
 <html ng-app="yomoApp">
 	<head>
-		<title>Räntekalkylen.se</title>
+		<title>Räntekalkylen.se - Räkna ränta, räntekostnader och ränta på ränta</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="msvalidate.01" content="A73BA76E47AB4DF05A697812183841D2" />
 		<meta name="google-site-verification" content="XKBROtRvJ9NiEx_Tlxy6hL7oh-ruYdutMkupECpAriE" />
+		
+		<meta name="description" content="Räkna snabbt ut ränta och räntekostnader på dina lån. Du kan även räkna ut ränta på ränta för ditt sparande.">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<!-- Bootstrap 3.0 CSS File -->
 		<link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen">
