--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="yomoApp">
 	<head>
-		<title>Räntekalkylen.se - Räkna ränta, räntekostnader och ränta på ränta</title>
+		<title>Räntekalkylen.se - Räkna ut ränta, räntekostnader och ränta på ränta</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="msvalidate.01" content="A73BA76E47AB4DF05A697812183841D2" />
 		<meta name="google-site-verification" content="XKBROtRvJ9NiEx_Tlxy6hL7oh-ruYdutMkupECpAriE" />
@@ -11,9 +11,7 @@
 		
 		<!-- Bootstrap 3.0 CSS File -->
 		<link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<!-- Font Awesome CSS File -->
-		<!--<link href="css/font-awesome.min.css" rel="stylesheet">-->
-
+		
 		<!-- Google Webfonts -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
