--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<link href="content/css/bootstrap.min.css" rel="stylesheet" media="screen">
 		
 		<!-- Google Webfonts -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		
 		
 		<!--<link href="css/pricing-table-global.css" rel="stylesheet">-->
