--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 		
 		<!--<link href="css/pricing-table-global.css" rel="stylesheet">-->
-		<link href="content/css/rantan.css" rel="stylesheet">
+		<link href="content/css/rantan.css?v=100" rel="stylesheet">
 	</head>
 
 	<body>
@@ -192,7 +192,7 @@
 			-->
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.js"></script>
-		<script src="content/js/main.js"></script>
+		<script src="content/js/main.js?v=100"></script>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
