--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 		
 		<!--<link href="css/pricing-table-global.css" rel="stylesheet">-->
-		<link href="content/css/rantan.css?v=100" rel="stylesheet">
+		<link href="content/css/rantan.css?v=101" rel="stylesheet">
 	</head>
 
 	<body>
@@ -175,7 +175,7 @@
 			
 			<div class="row">
 				<div class="col-xs-12 ads">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 					<!-- Ränta -->
 					<ins class="adsbygoogle"
 						style="display: inline-block; width: 320px; height: 100px"
@@ -197,7 +197,7 @@
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-46212289-1', 'auto');
 		  ga('send', 'pageview');
